# silmarel

./: .gitignore  .readthedocs.yaml  README.md  main.py  pyproject.toml  setup.py
docs/: conf.py
docs/_build/html/: .buildinfo  .buildinfo.bak  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  silmarel.html  usage.html
docs/_build/html/.doctrees/: contributing.doctree  environment.pickle  index.doctree  silmarel.doctree  usage.doctree
docs/_build/html/_sources/: usage.rst.txt
docs/_build/html/api/: silmarel.data.em_data.html  silmarel.data.gw_data.html  silmarel.data.html  silmarel.html  silmarel.likelihood.html  silmarel.likelihood.lenstronomy_likeli.html  silmarel.simulation.data_sim.html  (+5 more)
docs/_source/api/: silmarel.utils.gw_lensing.rst  silmarel.utils.rst
docs/api/: silmarel.data.rst  silmarel.likelihood.lenstronomy_likeli.rst  silmarel.likelihood.rst
docs/source/: conf.py  contributing.rst  index.rst  silmarel.rst  usage.rst
docs/source/api/: silmarel.simulation.data_sim.rst  silmarel.simulation.rst  silmarel.utils.funcs.rst
docs/source/api_old/: silmarel.data.gw_data.rst
examples/: data_sim.ipynb  lenstronomy_NS_example.py
silmarel/: __init__.py
silmarel/data/: em_data.py  gw_data.py
silmarel/likelihood/: __init__.py  lenstronomy_likeli.py
silmarel/silmarel/: __init__.py
silmarel/silmarel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
silmarel/silmarel/data/: __init__.py  em_data.py  gw_data.py
silmarel/silmarel/likelihood/: __init__.py  fast_likeli.py  lenstronomy_likeli.py
silmarel/silmarel/simulation/: __init__.py  data_sim.py
silmarel/silmarel/utils/: funcs.py  gw_lensing.py
silmarel/simulation/: __init__.py  data_sim.py  lenstronomy_sim.py
silmarel/utils/: __init__.py  funcs.py  gw_lensing.py  herculens_gw.py  lenstronomy_gw.py
(+39 files in other folders)
