
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "silmarel"
authors = [
    {name="Laura Uronen", email="lauraelina.uronen@ligo.org"},
    {name="Justin Janquart", email="justin.janquart@ligo.org"},
    {name="Otto Hannuksela", email="otto.hannuksela@ligo.org},
    {name="Mick Wright", email="mick.wright@ligo.org"},
]

maintainers = [
    {name="Laura Uronen", email="lauraelina.uronen@ligo.org"},
    {name="Justin Janquart", email="justin.janquart@ligo.org"},
    {name="Otto Hannuksela", email="otto.hannuksela@ligo.org},
    {name="Mick Wright", email="mick.wright@ligo.org"},
]

version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.23.1",
    "astropy>=6.1.7",
    "bilby>=2.7.1",
    "jax>=0.6.2",
    "jaxopt>=0.8.5",
    "lenstronomy>=1.13.5",
    "logging>=0.4.9.6",
    "nifty8>=8.5.7",
    "numpyro>=0.19.0",
    "optax>=0.2.6",
    "pymultinest>=2.12",
    "tqdm>=4.67.1",
]

[dependency-groups]
docs = [
  "myst-parser",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-argparse",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-github-style",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["silmarel*"]